--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cybpass-onboard",
+  "homepage": "https://paurushartwani.github.io/cybpassassignment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
